@@ -27,7 +27,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #endif
 
 #include <fstream.h>
-#include <getopt.h>
+#include <unistd.h>
 #include <stdio.h>
 #include <string>
 #include <vector>
